// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeeklyContribution Matches snapshot 1`] = `
<div
  className="sc-gtssRu rRoJ"
>
  <div
    className="sc-bdnylx gPrTLT"
  />
  <div
    className="sc-bdnylx gPrTLT"
  />
  <div
    className="sc-bdnylx gPrTLT"
  />
  <div
    className="sc-bdnylx gPrTLT"
  />
  <div
    className="sc-bdnylx gPrTLT"
  />
  <div
    className="sc-bdnylx gPrTLT"
  />
  <div
    className="sc-bdnylx gPrTLT"
  />
</div>
`;

exports[`WeeklyContribution when it receives contributions Matches snapshot 1`] = `
<div
  className="sc-dlnjPT bTrRUP"
>
  <div
    className="sc-gtssRu rRoJ"
  >
    <div
      className="sc-bdnylx bkFITR"
    />
    <div
      className="sc-bdnylx bkFITR"
    />
    <div
      className="sc-bdnylx fFbPkp"
    />
    <div
      className="sc-bdnylx fFbPkp"
    />
    <div
      className="sc-bdnylx fFbPkp"
    />
    <div
      className="sc-bdnylx eankiZ"
    />
    <div
      className="sc-bdnylx eankiZ"
    />
  </div>
  <div
    className="sc-gtssRu rRoJ"
  >
    <div
      className="sc-bdnylx eankiZ"
    />
    <div
      className="sc-bdnylx dSDfEd"
    />
    <div
      className="sc-bdnylx dSDfEd"
    />
    <div
      className="sc-bdnylx dSDfEd"
    />
    <div
      className="sc-bdnylx dSDfEd"
    />
    <div
      className="sc-bdnylx dSDfEd"
    />
    <div
      className="sc-bdnylx dSDfEd"
    />
  </div>
  <div
    className="sc-gtssRu rRoJ"
  >
    <div
      className="sc-bdnylx dSDfEd"
    />
  </div>
</div>
`;

exports[`WeeklyContribution when it receives null contributions Matches snapshot 1`] = `
<div
  className="sc-dlnjPT bTrRUP"
/>
`;

exports[`WeeklyContribution when receive empty contributions Matches snapshot 1`] = `
<div
  className="sc-dlnjPT bTrRUP"
/>
`;
